# python_01_learn_basic

./: .gitignore  README.md  pyproject.toml
python_codes/: 00___built-in_var.py  01___list.py  02___recursive.py  datetime_pytz_comparison.py  str_combination_with_f-string.py  test_built_in.py  test_class.py  test_class_private.py  test_class_var.py  test_dir.py  test_file_read.py  test_file_write.py  test_file_write.txt  test_getter_setter.py  test_import_flock.py  test_modules.py  test_open_struct.py  test_os_filesystem.py  test_string_concat.py  test_subprocess.py  test_try_except.py
python_codes/modules/: __init__.py  built_in.py  recursive.py
python_codes/test_import_flock/: __init__.py  file_lock.py
python_codes/test_modules/: __init__.py  built_in.py
