[tool.poetry]
name = "python-01-learn-basic"
version = "0.1.0"
description = ""
authors = ["Charlie Hsieh <charlieofficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
psutil = "^5.9.5"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
